proxmox/charts/custom-resource/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: podinfo.k8s.mr
    kubernetes.io/tls-acme: "true"
  name: prometheus-kps-podinfo
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: podinfo.k8s.mr
      http:
        paths:
          - backend:
              service:
                name: prometheus-kps-podinfo
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - secretName: podinfo.k8s.mr
      hosts:
        - podinfo.k8s.mr
